WIP: reproed in fake!

--- a/scripts/bang/tsconfig.json
+++ b/scripts/bang/tsconfig.json
@@ -2,6 +2,9 @@
     "compilerOptions": {
         "lib": ["es2017"],
         "strict": true,
-        "types": ["node"]
+        "types": ["node"],
+
+        "outDir": "bin",
+        "sourceMap": true
     }
 }
