--- a/scripts/bang/tsconfig.json
+++ b/scripts/bang/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
         "lib": ["es2017"],
+        "target": "es6",
+        "module": "commonjs",
         "strict": true,
         "types": ["node"],
 
